
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SOCKSET ;


 int Zero (int *,int) ;

void InitSockSet(SOCKSET *set)
{

 if (set == ((void*)0))
 {
  return;
 }

 Zero(set, sizeof(SOCKSET));
}
